--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "lucide": "^0.414.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
