--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
-    "react-qr-code": "^2.0.15"
+    "react-qr-code": "^2.0.15",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
